# libdetran

./: .cproject  .gitignore  .project  LICENSE  README
src/: CMakeLists.txt  CTestConfig.cmake  detran_config.h.in
src/angle/: AbuShumaysDoubleRange.cc  AbuShumaysDoubleRange.hh  AbuShumaysQuadrupleRange.cc  AbuShumaysQuadrupleRange.hh  AzimuthalQuadrature.hh  AzimuthalQuadrature.t.cc  AzimuthalQuadrature.t.hh  BaseGC.hh  BaseGL.hh  BaseQuadrature.hh  BaseUniform.hh  CMakeLists.txt  ChebyshevDPN.cc  ChebyshevDPN.hh  ChebyshevLegendre.cc  ChebyshevLegendre.hh  Collocated.cc  Collocated.hh  DPN.cc  DPN.hh  DTN.cc  DTN.hh  GaussChebyshev.cc  GaussChebyshev.hh  GaussLegendre.cc  GaussLegendre.hh  GenerateGaussChebyshev.hh  GenerateGaussLegendre.hh  LegendreDTN.cc  LegendreDTN.hh  LevelSymmetric.cc  LevelSymmetric.hh  MomentIndexer.cc  MomentIndexer.hh  MomentIndexer.i.hh  MomentToDiscrete.cc  MomentToDiscrete.hh  MomentToDiscrete.i.hh  PolarQuadrature.hh  PolarQuadrature.t.cc  (+32 more)
src/boundary/: BoundaryBase.cc  BoundaryBase.hh  BoundaryBase.i.hh  BoundaryCondition.hh  BoundaryConditionMOC.hh  BoundaryDiffusion.cc  BoundaryDiffusion.hh  BoundaryDiffusion.i.hh  BoundaryFactory.cc  BoundaryFactory.hh  BoundaryFactory.t.hh  BoundaryMOC.cc  BoundaryMOC.hh  BoundaryMOC.i.hh  BoundarySN.cc  BoundarySN.hh  BoundarySN.i.hh  BoundaryTraits.hh  CMakeLists.txt  FixedBoundary.cc  FixedBoundary.hh  FixedBoundary.i.hh  Periodic.hh  Periodic.i.hh  Reflective.hh  Reflective.i.hh  ReflectiveMOC.hh  ReflectiveMOC.i.hh  Vacuum.hh  VacuumMOC.hh  detran_boundary.i
src/callow/: CMakeLists.txt  callow.i  callow_config.hh  callow_module.i  detran_callow.i
src/cmake/: CMakeLists.txt  FindHDF5.cmake  FindSLEPc.cmake  FindSilo.cmake  GenerateExportHeaderModified.cmake  GetTheDate.cmake  SetupDetranLibrary.cmake  exportheadermodifed.cmake.in
src/config/: detran_config.h.in  detran_config.hh.in
src/detran_config/: detran_config.hh.in
src/diffusion/: BaseOperator.cc  BaseOperator.hh  CMakeLists.txt  DiffusionEigensolver.cc  DiffusionEigensolver.hh  FixedSource.hh  GainOperator.cc  GainOperator.hh  LossOperator.cc  LossOperator.hh  OneGroupLossOperator.cc  OneGroupLossOperator.hh  PartialCurrent.cc  PartialCurrent.hh  detran_diffusion.i
src/discretization/: CMakeLists.txt  DimensionTraits.hh  Equation.hh  Equation_DD_1D.cc  Equation_DD_1D.hh  Equation_DD_1D.i.hh  Equation_DD_2D.cc  Equation_DD_2D.hh  Equation_DD_2D.i.hh  Equation_DD_3D.cc  Equation_DD_3D.hh  Equation_DD_3D.i.hh  Equation_MOC.hh  Equation_SC_1D.hh  Equation_SC_1D.i.hh  Equation_SC_2D.cc  Equation_SC_2D.hh  Equation_SC_2D.i.hh  Equation_SC_MOC.cc  Equation_SC_MOC.hh  Equation_SC_MOC.i.hh  Equation_SD_1D.cc  Equation_SD_1D.hh  Equation_SD_1D.i.hh  Equation_SD_2D.cc  Equation_SD_2D.hh  Equation_SD_2D.i.hh  detran_discretization.i
src/drivers/: CMakeLists.txt  Execute.cc  Execute.hh  Execute2.hh  StupidParser.cc  StupidParser.hh  detran.bat  detran.cc
src/external_source/: BoundarySource.hh  CMakeLists.txt  ConstantSource.cc  ConstantSource.hh  DiscreteSource.cc  DiscreteSource.hh  ExternalSource.cc  ExternalSource.hh  IsotropicSource.cc  IsotropicSource.hh  detran_external_source.i
src/geometry/: Assembly.cc  Assembly.hh  CMakeLists.txt  CSG.cc  CSG.hh  Core.cc  Core.hh  Geometry.cc  Geometry.hh  GeometryMesher.cc  GeometryMesher.hh  Macrobody.cc  Macrobody.hh  Mesh.cc  Mesh.hh  Mesh.i.hh  Mesh1D.cc  Mesh1D.hh  Mesh2D.cc  Mesh2D.hh  Mesh3D.cc  Mesh3D.hh  MeshMOC.hh  PinCell.cc  PinCell.hh  Point.cc  Point.hh  QuadraticSurface.cc  QuadraticSurface.hh  QuadraticSurfaceFactory.hh  Ray.hh  Region.cc  Region.hh  RegionFactory.cc  RegionFactory.hh  Segment.cc  Segment.hh  Surface.hh  Track.cc  Track.hh  (+9 more)
src/ioutils/: CMakeLists.txt  ColorMap.cc  ColorMap.hh  IO_HDF5.cc  IO_HDF5.hh  IO_HDF5.t.hh  IO_HDF5_Traits.hh  PPMOutput.cc  PPMOutput.hh  PPMPlotter.cc  PPMPlotter.hh  PSPlotter.hh  SiloOutput.cc  SiloOutput.hh  StdOutUtils.hh  detran_ioutils.i
src/kinetics/: BDFCoefficients.hh  CMakeLists.txt  KineticsMaterial.cc  KineticsMaterial.hh  KineticsMaterial.i.hh  LRA.cc  LRA.hh  LinearExternalSource.cc  LinearExternalSource.hh  LinearExternalSource.i.hh  LinearMaterial.cc  LinearMaterial.hh  MultiPhysics.cc  MultiPhysics.hh  Precursors.cc  Precursors.hh  Precursors.i.hh  PulsedExternalSource.cc  PulsedExternalSource.hh  PulsedExternalSource.i.hh  PyTimeDependentMaterial.cc  PyTimeDependentMaterial.hh  SyntheticDiscreteSource.cc  SyntheticDiscreteSource.hh  SyntheticDiscreteSource.i.hh  SyntheticMomentSource.cc  SyntheticMomentSource.hh  SyntheticMomentSource.i.hh  SyntheticSource.cc  SyntheticSource.hh  SyntheticSource.i.hh  TimeDependentExternalSource.hh  TimeDependentMaterial.cc  TimeDependentMaterial.hh  TimeIndependentMaterial.cc  TimeIndependentMaterial.hh  TimeStepper.hh  callback.i  detran_kinetics.i
src/material/: CMakeLists.txt  Material.cc  Material.hh  Material.i.hh  detran_material.hh  detran_material.i  detran_materials.i  test.py
src/moc/: CMakeLists.txt  Collocated.cc  Collocated.hh  MOC.hh  PolarQuadrature.hh  QuadratureMOC.cc  QuadratureMOC.hh  Segment.hh  TabuchiYamamoto.cc  TabuchiYamamoto.hh  Track.hh  TrackDB.cc  TrackDB.hh  Tracker.cc  Tracker.hh  Uniform.cc  Uniform.hh  detran_moc.i
src/orthog/: CLP.cc  CLP.hh  CMakeLists.txt  ChebyshevU.cc  ChebyshevU.hh  ContinuousOrthogonalBasis.cc  ContinuousOrthogonalBasis.hh  DCP.cc  DCP.hh  DCT.cc  DCT.hh  DDF.cc  DDF.hh  DLP.cc  DLP.hh  Jacobi01.cc  Jacobi01.hh  OrthogonalBasis.cc  OrthogonalBasis.hh  OrthogonalBasis.i.hh  OrthogonalBasisParameters.hh  OrthogonalPolynomials.hh  TransformedBasis.cc  TransformedBasis.hh  UserBasis.cc  UserBasis.hh  detran_orthog.hh  detran_orthog.i
src/postprocess/: CMakeLists.txt  ReactionRates.cc  ReactionRates.hh  SiloOutput.cc  SiloOutput.hh  detran_postprocess.i
src/python/: CMakeLists.txt  Manager.hh  PyExecute.hh  __init__.py  detran.i  output.i
src/solvers/: CMakeLists.txt  DiffusionEigensolver.cc  DiffusionEigensolver.hh  DiffusionFixedSourceSolve.cc  DiffusionFixedSourceSolver.cc  DiffusionFixedSourceSolver.hh  EigenDiffusion.cc  (+99 more)
(+617 files in other folders)
